--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="burn">Burn.</string>
     <string name="cons">Cons.</string>
     <string name="add">Add</string>
+    <string name="title_activity_gym_trainer__dashboard">GymTrainer_Dashboard</string>
 </resources>
