--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,9 +18,7 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string-array name="Gender">
-        <item>Male
-
-        </item>
+        <item>Male</item>
         <item>Female</item>
 
     </string-array>
